[FLINK-36510][runtime] Support partial lineage info collection